crates/toml_edit/tests/fixtures/invalid/integer-underscore-before.stderr
TOML parse error at line 1, column 7
  |
1 | bad = _123
  |       ^
Unexpected `_`
Expected `-`, `+`, `inf`, `nan`, `0x`, `0o` or `0b`
expected 4 more elements
expected 2 more elements
While parsing a Time
While parsing a hexadecimal Integer
While parsing a octal Integer
While parsing a binary Integer
While parsing an Integer
While parsing a Date-Time
While parsing a Float
